# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Added
- [LOG_FORWARDER] [SENTINEL] Add new Log Forwarder to Vulture GUI


## [2.29.1] - 2025-08-22
### Added
- [RSYSLOG] add mmutf8fix to default loaded modules
### Fixed
- [PORTAL] [HAPROXY] Only set X-Forwarded-Proto header if it doesn't already exist in request
- [LOGFWD] [KAFKA] Correctly use key value for templating


## [2.29.0] - 2025-08-01
### Changed
- [API_PARSER] [SENTINEL_ONE_IDENTITY_GRAPH] rename to Sentinel One Graph
- [API_PARSER] [SENTINEL_ONE_GRAPH] Filter events with detectionSource.product
- [API_PARSER] [SENTINEL_ONE_GRAPH] Various log formatting improvements
### Added
- [API_PARSER] [SENTINEL_ONE_GRAPH] Get more fields from alert details
### Fixed
- [PORTAL] [HAPROXY] Only set X-Forwarded-Proto header if it doesn't already exist in request


## [2.28.2] - 2025-07-28
### Fixed
- [PORTAL] Ensure Haproxy configurations are up to date on Portal changes


## [2.28.1] - 2025-07-11
### Fixed
- [API] [X509CERTIFICATE] AssertionError on non-existent certificate
- [MIGRATIONS] Set missing default values for complex fields in Frontends
- [API_PARSER] [CISCO_MERAKI] Correctly set and save timestamp after log collection
- [API_PARSER] [HORNETSECURITY] Remove 'subject' field base64-encoding for 'emails' logs


## [2.28.0] - 2025-06-26
### Added
- [API_PARSER] [SENTINEL_ONE_IDENTITY_GRAPH] New collector
### Changed
- [DEPENDENCIES]
  - certifi 2025.4.26 -> 2025.6.15
  - django 4.2.21 -> 4.2.23
  - protobuf 4.25.3 -> 4.25.8
### Fixed
- [API_PARSER] [PROOFPOINT_POD] Increment the last_api_call of 1 second to avoid duplication
- [API_PARSER] [BLACKBERRY_CYLANCE] Wait for 60s when rate-limited by the API
- [SYSTEM] [PF] Add missing internal rule for inter-cluster GUI/API access