@@ -8,6 +8,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [Unreleased]
 ### Added
 - [LOG_FORWARDER] [SENTINEL] Add new Log Forwarder to Vulture GUI
+### Fixed
+- [API_PARSER] [GATEWATCHER_ALERTS] Reduce the page size to 10 to avoid timeout errors
 
 
 ## [2.29.1] - 2025-08-22
